
////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.14.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix filter delete for trigger update command
| https://github.com/knative/client/pull/746[#746]

| 🐛
| Fix trigger create --filter flag to be optional
| https://github.com/knative/client/pull/745[#745]

## v0.13.0 (2020-03-11)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add a flag `--inject-broker` to `kn trigger create`
| https://github.com/knative/client/pull/726[#726]

| 🐛
| Improve reporting for missing `kubeconfig` and error connecting to the cluster
| https://github.com/knative/client/pull/725[#725]

| 🎁
| Add JSON/YAML output format for `kn version`
| https://github.com/knative/client/pull/709[#709]

| 🐣
| Replace `kn source cronjob` with `kn source ping`. `--schedule` is not mandatory anymore and defaults to "* * * * *" (every minute)
| https://github.com/knative/client/issues/705[#705]

| ✨
| Update to Knative serving 0.13.0 and Knative eventing 0.13.1
| https://github.com/knative/client/issues/705[#705]

| 🎁
| Add `--label-service` and `--label-revision` to specify where to put labels for `kn service`
| https://github.com/knative/client/pull/703[#703]

| 🐛
| Fix wait on `Ready` condition by filtering out synthetic events
| https://github.com/knative/client/pull/701[#701]

| ✨
| Add `--wait` and `--no-wait` to `kn service delete` and change synchronous deletion
| https://github.com/knative/client/pull/682[#682]

| 🎁
| Add `--user` flag to `kn service` for specifying the user id to run the container
| https://github.com/knative/client/pull/679[#679]

| 🎁
| Add configuration of sink prefixes for `kn source`
| https://github.com/knative/client/pull/676[#676]

| 🎁
| Add `kn service export` for exporting a service
| https://github.com/knative/client/pull/669[#669]

| 🎁
| Adopt to XDG specification to `XDG_CONFIG_HOME` for default config location