@@ -5,7 +5,7 @@ Plugins follow a similar architecture to
 with some small differences. One key difference is that `kn` plugins can either
 live in your `PATH` or in a chosen and specified directory.
 [Kn plugins](https://github.com/knative/client/tree/master/docs/cmd/kn_plugin.md)
-shows how to install and create new plugins as well as gives some examples and
+show how to install and create new plugins as well as gives some examples and
 best practices.
 
 To see what plugins are installed on your machine, you can use the
